--- a/src/app/middle/discover/middle-top/middle-top.component.css
+++ b/src/app/middle/discover/middle-top/middle-top.component.css
@@ -1,5 +1,23 @@
-.middle-top{
-    width: 100%;
-    height: 336px;
-    background: url("../../../../assets/images/背景条1.jpg") repeat-x;
+.middle-top {
+  width: 100%;
+  height: 336px;
+  background: url("../../../../assets/images/1-1.jpg") repeat-x;
+}
+
+.middle-center {
+  width: 68%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.middle-center-left {
+  width: 80%;
+  height: 100%;
+  float: left;
+}
+
+.middle-right {
+  width: 20%;
+  height: 100%;
+  float: right;
 }
