--- a/src/app/middle/discover/middle-top/middle-top.component.html
+++ b/src/app/middle/discover/middle-top/middle-top.component.html
@@ -1,3 +1,10 @@
 <div class="middle-top">
-  123
+  <div class="middle-center">
+    <div class="middle-center-left">
+      <a href="javascript:void(0)">
+        <img src="../../../../assets/images/1.jpg" alt="">
+      </a>
+    </div>
+    <div class="middle-right"></div>
+  </div>
 </div>
