--- a/src/app/top/top.component.css
+++ b/src/app/top/top.component.css
@@ -37,6 +37,17 @@
 .click{
     background-color: #000;
 }
+.click::after{
+    content: ' ';
+    display: inline-block;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid red;
+    left: calc(50% - 6px);
+    bottom: 0;
+    position: absolute;
+}
 .top-list-tip{
     display: inline-block;
     position: absolute;
@@ -97,4 +108,9 @@
     display: inline-block;
     background-image: url("../../assets/images/topbar.png");
     background-position: 19px -45px;
+}
+.top-child{
+    width: 100%;
+    border: 2px solid red;
+    background-color: red;
 }
