--- a/src/app/middle/discover/middle-contain/middle-contain.component.html
+++ b/src/app/middle/discover/middle-contain/middle-contain.component.html
@@ -1,3 +1,10 @@
-<p>
-  middle-contain works!
-</p>
+<div class="middle-contain">
+  <div class="contain-center">
+    <div class="contain-center-left">
+      <div class="center-left-top">
+        123
+      </div>
+    </div>
+    <div class="contain-center-right"></div>
+  </div>
+</div>
