--- a/src/app/middle/discover/middle-top/middle-top.component.html
+++ b/src/app/middle/discover/middle-top/middle-top.component.html
@@ -4,14 +4,15 @@
       <a href="javascript:void(0)">
         <img [src]=imageSrc alt="">
       </a>
-      <div class="dots">
-        <a href="javascript:void(0)" *ngFor="let item of images, let i=index" (click)="locationImage(i)" ></a>
+      <div class="dots" >
+        <a href="javascript:void(0)" *ngFor="let item of images, let i=index" (click)="locationImage(i)"
+        [attr.data-index]="i" #dots></a>
       </div>
     </div>
     <div class="middle-right">
       <a href="javascript:void(0)"></a>
     </div>
   </div>
-  <a href="#" class="scroll-left"></a> 
-  <a href="#" class="scroll-right"></a>
+  <a href="javascript:void(0)" class="scroll-left" (click)="scroll('left')" ></a> 
+  <a href="javascript:void(0)" class="scroll-right" (click)="scroll('right')" ></a>
 </div>
