--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -35,4 +35,13 @@
     </div>
   </div>
 </div>
-<div class="top-child"></div>
+<div class="top-child">
+  <ul class="top-child-list">
+    <li>推荐</li>
+    <li>排行榜</li>
+    <li>歌单</li>
+    <li>主播电台</li>
+    <li>歌手</li>
+    <li>新碟上架</li>
+  </ul>
+</div>
