--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -36,7 +36,7 @@
   </div>
 </div>
 <div class="top-child">
-  <ul class="top-child-list">
+  <ul class="top-child-list" *ngIf="routerPath=='/discover'||routerPath=='/'" >
     <li>推荐</li>
     <li>排行榜</li>
     <li>歌单</li>
