--- a/src/app/middle/discover/middle-top/middle-top.component.css
+++ b/src/app/middle/discover/middle-top/middle-top.component.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 336px;
   background: url("../../../../assets/images/1-1.jpg") repeat-x;
+  position: relative;
 }
 
 .middle-center {
@@ -18,7 +19,7 @@
   position: relative;
 }
 .middle-center-left>a{
-  height: 100%;
+  /* height: 100%; */
   display: inline-block;
 }
 .scroll-left,.scroll-right{
@@ -34,12 +35,12 @@
   opacity: .3;
 }
 .scroll-left{
-  left: 215px;
+  left: -56px;
   background: url("../../../../assets/images/banner.png") no-repeat;
   background-position: -2px -359px;
 }
 .scroll-right{
-  right: 215px;
+  right: -310px;
   background: url("../../../../assets/images/banner.png") no-repeat;
   background-position: 0 -506px;
 }
