--- a/src/app/middle/discover/middle-top/middle-top.component.html
+++ b/src/app/middle/discover/middle-top/middle-top.component.html
@@ -1,4 +1,4 @@
-<div class="middle-top" [ngStyle]="{'background': imageBgc}">
+<div class="middle-top" [ngStyle]="{'background': imageBgc}" #imagesContent>
   <div class="middle-center">
     <div class="middle-center-left">
       <a href="javascript:void(0)">
@@ -7,7 +7,7 @@
       <a href="javascript:void(0)" class="scroll-left" (click)="scroll('left')" ></a> 
       <a href="javascript:void(0)" class="scroll-right" (click)="scroll('right')" ></a>
       <div class="dots" >
-        <a href="javascript:void(0)" *ngFor="let item of images, let i=index" (click)="locationImage(i)"
+        <a href="javascript:void(0)" [ngClass]="dotsScroll(i)" *ngFor="let item of images, let i=index" (click)="locationImage(i)"
         [attr.data-index]="i" #dots></a>
       </div>
     </div>
@@ -15,6 +15,4 @@
       <a href="javascript:void(0)"></a>
     </div>
   </div>
-  <!-- <a href="javascript:void(0)" class="scroll-left" (click)="scroll('left')" ></a> 
-  <a href="javascript:void(0)" class="scroll-right" (click)="scroll('right')" ></a> -->
 </div>
