--- a/src/app/middle/middle.component.html
+++ b/src/app/middle/middle.component.html
@@ -1,2 +1,2 @@
-<app-middle-top></app-middle-top>
-<app-middle-contain></app-middle-contain>
+<!-- <app-middle-top></app-middle-top>
+<app-middle-contain></app-middle-contain> -->
