--- a/src/app/top/top.component.css
+++ b/src/app/top/top.component.css
@@ -43,7 +43,7 @@
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-top: 6px solid transparent;
-    border-bottom: 6px solid red;
+    border-bottom: 6px solid #C20C0C;
     left: calc(50% - 6px);
     bottom: 0;
     position: absolute;
@@ -111,8 +111,8 @@
 }
 .top-child{
     width: calc(100% - 4px);
-    border: 2px solid red;
-    background-color: red;
+    border: 2px solid #C20C0C;
+    background-color: #C20C0C;
 }
 .top-child-list{
     width: 744px;
@@ -120,4 +120,10 @@
 }
 .top-child-list>li{
     display: inline-block;
+    height: 34px;
+    color: #fff;
+    padding: 0 30px;
+    font-size: 12px;
+    line-height: 34px;
+    cursor: pointer;
 }
