--- a/src/app/middle/discover/common/common.component.html
+++ b/src/app/middle/discover/common/common.component.html
@@ -17,6 +17,20 @@
     </span>
   </div>
   <div class="rmtj-zht">
-    <div class="item" *ngFor="let item of [0,1,2,3,4,5,6,7]"></div>
+    <div class="item" *ngFor="let item of [0,1,2,3,4,5,6,7]">
+      <div class="item-detail">
+        <a href="javascript:void(0)">
+          <img src="../../../../assets/images/狗子.jpg" alt="">
+        </a>
+        <div class="item-icon">
+          <span></span>
+          <span>3344</span>
+          <a href="javascript:void(0)"></a>
+        </div>
+      </div>
+      <div class="item-desc">
+        <a href="javascript:void(0)">喜欢就大声说出来啊，又不用交税</a>
+      </div>
+    </div>
   </div>
 </div>
