--- a/src/app/bottom/bottom.component.css
+++ b/src/app/bottom/bottom.component.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 150px;
     background-color: #f2f2f2;
+    border-top: 1px solid #d3d3d3;
 }
 .bottom-contain{
     width: 64%;
