--- a/src/app/middle/discover/discover.component.html
+++ b/src/app/middle/discover/discover.component.html
@@ -1,2 +1,2 @@
-<app-middle-top></app-middle-top>
-<app-middle-contain></app-middle-contain>
+<app-banner></app-banner>
+<app-song-list></app-song-list>
