--- a/src/app/middle/discover/song-list/song-list.component.css
+++ b/src/app/middle/discover/song-list/song-list.component.css
@@ -123,7 +123,7 @@
 
 
 .contain-center-right {
-  width: 252px;
+  width: 250px;
   height: 100%;
   float: right;
 }
@@ -218,7 +218,7 @@
   overflow: hidden;
   position: absolute;
   width: 100%;
-  padding-left: 16px;
+  padding: 0 16px;
   box-sizing: border-box;
 }
 
