--- a/src/app/top/top.component.css
+++ b/src/app/top/top.component.css
@@ -1,129 +1,153 @@
-.top{
-    height: 70px;
-    background-color: #242424;
-    color: #fff;
+.top {
+  height: 70px;
+  background-color: #242424;
+  color: #fff;
 }
-.top-center{
-    width: 1100px;
-    height: 100%;
-    margin: 0 auto;
+
+.top-center {
+  width: 1100px;
+  height: 100%;
+  margin: 0 auto;
 }
-.logo{
-    float: left;
-    width: 175px;
-    height: 100%;
-    background-image: url("../../assets/images/topbar.png");
+
+.logo {
+  float: left;
+  width: 175px;
+  height: 100%;
+  background-image: url("../../assets/images/topbar.png");
 }
-.top-list{
-    float: left;
-    font-size: 14px;
+
+.top-list {
+  float: left;
+  font-size: 14px;
 }
-.top-list>li{
-    display: inline-block;
-    height: 70px;
-    line-height: 70px;
-    text-align: center;
-    cursor: pointer;
-    position: relative;
+
+.top-list>li {
+  display: inline-block;
+  height: 70px;
+  line-height: 70px;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
 }
-.top-list>li>a{
-    display: inline-block;
-    padding: 0 19px;
-    color: #fff;
+
+.top-list>li>a {
+  display: inline-block;
+  padding: 0 19px;
+  color: #fff;
 }
-.top-list>li>a:hover{
-    background-color: #000;
+
+.top-list>li>a:hover {
+  background-color: #000;
 }
-.click{
-    background-color: #000;
+
+.click {
+  background-color: #000;
 }
-.click::after{
-    content: ' ';
-    display: inline-block;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid #C20C0C;
-    left: calc(50% - 6px);
-    bottom: 0;
-    position: absolute;
+
+.click::after {
+  content: ' ';
+  display: inline-block;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid #C20C0C;
+  left: calc(50% - 6px);
+  bottom: 0;
+  position: absolute;
 }
-.top-list-tip{
-    display: inline-block;
-    position: absolute;
-    width: 30px;
-    height: 20px;
-    right: -25px;
-    top: 18px;
-    background-image: url("../../assets/images/topbar.png");
-    background-position: 48px 0px;
+
+.top-list-tip {
+  display: inline-block;
+  position: absolute;
+  width: 30px;
+  height: 20px;
+  right: -25px;
+  top: 18px;
+  background-image: url("../../assets/images/topbar.png");
+  background-position: 48px 0px;
 }
-.search,.creator,.login{
-    font-size: 12px;
-    float: right;
+
+.search,
+.creator,
+.login {
+  font-size: 12px;
+  float: right;
 }
-.search{
-    background-color: #fff;
-    border-radius: 32px;
-    padding: 4px;
-    margin: 20px 0 0;
+
+.search {
+  background-color: #fff;
+  border-radius: 32px;
+  padding: 4px;
+  margin: 20px 0 0;
 }
-.search-input{
-    border: none;
-    vertical-align: -2px;
-    font-size: 12px;
+
+.search-input {
+  border: none;
+  vertical-align: -2px;
+  font-size: 12px;
 }
-.search-input:focus{
-    border: none;
-    outline: none;
+
+.search-input:focus {
+  border: none;
+  outline: none;
 }
-.search-icon{
-    width: 22px;
-    height: 22px;
-    display: inline-block;
-    background-image: url("../../assets/images/topbar.png");
-    background-position: -6px 111px;
-    vertical-align: text-top;
+
+.search-icon {
+  width: 22px;
+  height: 22px;
+  display: inline-block;
+  background-image: url("../../assets/images/topbar.png");
+  background-position: -6px 111px;
+  vertical-align: text-top;
 }
-.creator{
-    border: 1px solid rgb(133, 133, 133);
-    border-radius: 48px;
-    padding: 6px 12px;
-    margin: 20px 12px 0;
-    cursor: pointer;
+
+.creator {
+  border: 1px solid rgb(133, 133, 133);
+  border-radius: 48px;
+  padding: 6px 12px;
+  margin: 20px 12px 0;
+  cursor: pointer;
 }
-.creator>a{
-    color: #fff;
+
+.creator>a {
+  color: #fff;
 }
-.creator:hover{
-    border: 1px solid #ccc;
+
+.creator:hover {
+  border: 1px solid #ccc;
 }
-.login{
-    cursor: pointer;
-    line-height: 70px;
+
+.login {
+  cursor: pointer;
+  line-height: 70px;
 }
-.login-icon{
-    width: 22px;
-    height: 22px;
-    display: inline-block;
-    background-image: url("../../assets/images/topbar.png");
-    background-position: 19px -45px;
+
+.login-icon {
+  width: 22px;
+  height: 22px;
+  display: inline-block;
+  background-image: url("../../assets/images/topbar.png");
+  background-position: 19px -45px;
 }
-.top-child{
-    width: calc(100% - 4px);
-    border: 2px solid #C20C0C;
-    background-color: #C20C0C;
+
+.top-child {
+  width: 100%;
+  border: 2px solid #C20C0C;
+  background-color: #C20C0C;
 }
-.top-child-list{
-    width: 744px;
-    margin: 0 auto;
+
+.top-child-list {
+  width: 744px;
+  margin: 0 auto;
 }
-.top-child-list>li{
-    display: inline-block;
-    height: 30px;
-    color: #fff;
-    padding: 0 30px;
-    font-size: 12px;
-    line-height: 30px;
-    cursor: pointer;
+
+.top-child-list>li {
+  display: inline-block;
+  height: 30px;
+  color: #fff;
+  padding: 0 30px;
+  font-size: 12px;
+  line-height: 30px;
+  cursor: pointer;
 }
