--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-li{
-    list-style: none;
+
+li {
+  list-style: none;
 }
-a{
-    cursor: pointer;
-    text-decoration: none;
-    color: #000;
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+  color: #000;
 }
