--- a/src/app/middle/discover/song-list/song-list.component.html
+++ b/src/app/middle/discover/song-list/song-list.component.html
@@ -9,12 +9,12 @@
         </div>
         <!-- 新碟上架 -->
         <div class="xdsj">
-          <app-navgation-bar navBarTitle="新碟上架"></app-navgation-bar>
+          <app-navgation-bar [navBarTitle]="'新碟上架'"></app-navgation-bar>
           <app-new-disc [newDisc]="newDiscList"></app-new-disc>
         </div>
         <!-- 榜单 -->
         <div class="xdsj">
-          <app-navgation-bar navBarTitle="榜单"></app-navgation-bar>
+          <app-navgation-bar [navBarTitle]="'榜单'"></app-navgation-bar>
           <div class="xdsj-zht"></div>
         </div>
 
