--- a/src/app/middle/discover/song-list/song-list.component.css
+++ b/src/app/middle/discover/song-list/song-list.component.css
@@ -120,8 +120,6 @@
   border-width: 0 1px;
 }
 
-
-
 .contain-center-right {
   width: 250px;
   height: 100%;
@@ -233,4 +231,16 @@
   width: 100%;
   background-image: url(../../../../assets/images/coverall.png);
   background-position: 1px -568px;
+}
+
+.rzgs,
+.rmzb {
+  margin: 0 20px;
+}
+
+.h3-head {
+  font-size: 12px;
+  font-weight: normal;
+  border-bottom: 1px solid #ccc;
+  padding: 6px 0;
 }
