--- a/src/app/middle/discover/song-list/song-list.component.html
+++ b/src/app/middle/discover/song-list/song-list.component.html
@@ -26,8 +26,22 @@
         <p class="note">登录网易云音乐，可以享受无限收藏的乐趣，并且无限同步到手机</p>
         <a href="javascript:void(0)">用户登录</a>
       </div>
-      <div class="rzgs">入驻歌手</div>
-      <div class="rmzb">热门主播</div>
+      <div class="rzgs">
+        <h3 class="h3-head">
+          <span class="fl">入驻歌手</span>
+          <a class="fr">查看全部></a>
+          <div class="clearfix"></div>
+        </h3>
+        <app-common-list-item [data]="enterSingers.artists" [img]="'picUrl'" [name]="'name'" [desc]="'briefDesc'"></app-common-list-item>
+      </div>
+      <div class="rmzb">
+        <h3 class="h3-head">
+          <span class="fl">热门主播</span>
+          <!-- <a class="fr">查看全部</a> -->
+          <div class="clearfix"></div>
+        </h3>
+        <app-common-list-item></app-common-list-item>
+      </div>
     </div>
   </div>
 </div>
